--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,12 @@
     background-color: rgb(17, 179, 3);
     overflow: hidden;
     margin-top: 10px;
+    
+    position: relative;
+   
   }
   
+
   
   .topnav a {
     float: left;
@@ -28,8 +32,18 @@
   }
 
  
-
+.topnavtext{
+  transform: translate(0%, 20%);
+}
   
+
+.topnavicon{
+  float: right;
+  transform: translate(450px, 0%);
+  padding: 0%;
+  height: 0%;
+  width: -40px;
+}
   .containerDrop {  
     background: rgb(190, 102, 102);
     align-items: center;
@@ -241,4 +255,30 @@ position: absolute;
   font-size: small;
   padding: 15px;
  padding-block: 10px;
+}
+
+.forminput {
+  border-color: rgb(17, 179, 3);
+}
+
+.footere {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(17, 179, 3);
+  height: 50px; /* Tamanho que deseja para a div*/
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
+  place-items: center;
+  color: white;
+  font-weight: bold;
+}
+
+.icon-text {
+  display: flex; /* define a div como flex container */
+  align-items: center; /* centraliza o elemento no eixo vertical */
+  justify-content: flex-start; /* alinha os elementos no início */
+  
 }
